# oracle_support

./: .gitignore  README.md  pyproject.toml
data/: alert.json  alert_aux.json  best_model_f1.pth  best_model_f1_lsst.pth  best_model_f1_ztf.pth  lsst_alert.json  lsst_aux.json
src/oracle_support/: alerts_consumer_lsst.py  alerts_consumer_ztf.py  oracle_boom_lsst.py  oracle_boom_ztf.py  plot_oracle.py  slack_post.py
